--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm-run-all -p -r build start:dev",
+    "build": "webpack -w --node-env development",
+    "build:prod": "webpack",
+    "start:dev": "nodemon build/index",
+    "start:prod": "node build/server"
   },
   "repository": {
     "type": "git",
@@ -15,5 +21,14 @@
   "bugs": {
     "url": "https://github.com/kentleighenglish/vtm-st-tool/issues"
   },
-  "homepage": "https://github.com/kentleighenglish/vtm-st-tool#readme"
+  "homepage": "https://github.com/kentleighenglish/vtm-st-tool#readme",
+  "dependencies": {
+    "express": "^4.17.2"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5"
+  }
 }
