--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "homepage": "https://github.com/kentleighenglish/vtm-st-tool#readme",
   "dependencies": {
+    "angular": "^1.8.2",
     "express": "^4.17.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1"
   }
 }
