--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/kentleighenglish/vtm-st-tool#readme",
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.30",
     "angular": "^1.8.2",
     "express": "^4.17.2"
   },
@@ -30,6 +31,7 @@
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "webpack": "^5.66.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-merge": "^5.8.0"
   }
 }
