--- a/.editorconfig
+++ b/.editorconfig
@@ -1,13 +1,16 @@
-# editorconfig.org
+
 root = true
 
 [*]
+indent_style = tab
+indent_size = 4
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[{*.json,*.yml}]
 indent_style = space
 indent_size = 2
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
 
-[*.md]
-trim_trailing_whitespace = false
+[*.js]
+insert_final_newline = false
