--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
+    "debug": "^4.3.4",
+    "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
