--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "core-js": "^3.19.3",
     "debug": "^4.3.4",
     "lodash": "^4.17.21",
+    "mongodb": "^4.5.0",
     "nuxt": "^2.15.8",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
