--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nuxt": "^2.15.8",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
