--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment-timezone": "^0.5.34",
     "mongodb": "^4.5.0",
     "nuxt": "^2.15.8",
+    "portal-vue": "^2.1.7",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
     "uuid": "^8.3.2",
