--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lintfix": "npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@deskeen/markdown": "^5.1.3",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.19.3",
