--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "core-js": "^3.19.3",
     "debug": "^4.3.4",
+    "discord.js": "^13.7.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.34",
     "mongodb": "^4.5.0",
