--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.34",
     "mongodb": "^4.5.0",
+    "node-cache": "^5.1.2",
     "nuxt": "^2.15.8",
     "portal-vue": "^2.1.7",
     "socket.io": "^4.5.0",
