--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "core-js": "^3.19.3",
     "debug": "^4.3.4",
     "discord.js": "^13.7.0",
+    "file-system-cache": "^2.0.0",
     "lodash": "^4.17.21",
     "moment-timezone": "^0.5.34",
     "mongodb": "^4.5.0",
-    "node-cache": "^5.1.2",
     "nuxt": "^2.15.8",
     "portal-vue": "^2.1.7",
     "socket.io": "^4.5.0",
