--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "discord.js": "^13.7.0",
     "file-system-cache": "^2.0.0",
     "lodash": "^4.17.21",
+    "module-alias": "^2.2.2",
     "moment-timezone": "^0.5.34",
     "mongodb": "^4.5.0",
     "nuxt": "^2.15.8",
@@ -35,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.17.12",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "eslint": "^8.4.1",
