--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io-client": "^4.5.0",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
+    "vue-multiselect": "^2.1.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
