--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^4.5.0",
     "nuxt": "^2.15.8",
     "portal-vue": "^2.1.7",
+    "sharp": "^0.30.7",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
     "uuid": "^8.3.2",
